# arxiv2md

./: .gitattributes  .gitignore  .prompts.md  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
demo/: demo_arxiv2md_beta.py
docs/: more-meta.md  old_OPTIMIZATION_PLAN.md  pipeline.md
src/arxiv2md_beta/: __init__.py  __main__.py  arxiv_api.py  cli.py  config.py  crossref_api.py  exceptions.py  fetch.py  html_ingestion.py  html_parser.py  image_resolver.py  ingestion.py  latex_ingestion.py  latex_parser.py  local_ingestion.py  markdown.py  output_formatter.py  paper_metadata.py  query_parser.py  tex_source.py
src/arxiv2md_beta/cache/: __init__.py  result_cache.py
src/arxiv2md_beta/citations/: __init__.py  formatter.py  html_parser.py  models.py  resolver.py
src/arxiv2md_beta/cli/: __init__.py  app.py  config_cmd.py  convert_cli.py  helpers.py  output_finalize.py  params.py  runner.py
src/arxiv2md_beta/cli/runner/: __init__.py  base.py  batch.py  convert.py  images.py  paper_yml.py
src/arxiv2md_beta/config/: __init__.py  default_config.yml
src/arxiv2md_beta/config/environments/: development.yml  production.yml  test.yml
src/arxiv2md_beta/html/: __init__.py  markdown.py  parser.py  sections.py
src/arxiv2md_beta/html/serializers/: __init__.py  base.py  block.py  inline.py
src/arxiv2md_beta/images/: __init__.py  extract.py  resolver.py
src/arxiv2md_beta/ingestion/: __init__.py  html.py  ir_pipeline.py  latex.py  local.py  local_html.py  orchestrator.py  pipeline.py
src/arxiv2md_beta/ir/: __init__.py  _legacy_blocks.py  assets.py  blocks.py  core.py  document.py  inlines.py  visitor.py
src/arxiv2md_beta/ir/builders/: __init__.py  base.py  html.py  latex.py
src/arxiv2md_beta/ir/emitters/: __init__.py  base.py  json_emitter.py  markdown.py  plaintext.py
src/arxiv2md_beta/ir/resolvers/: __init__.py  images.py
src/arxiv2md_beta/ir/transforms/: __init__.py  anchor.py  base.py  figure_reorder.py  numbering.py  section_filter.py
src/arxiv2md_beta/latex/: __init__.py  author_affiliations.py  parser.py  structured.py  tex_source.py
src/arxiv2md_beta/network/: __init__.py  arxiv_abs_html.py  arxiv_api.py  author_enrichment.py  crossref_api.py  fetch.py  http.py  openalex_api.py
src/arxiv2md_beta/output/: __init__.py  formatter.py  layout.py  markdown_postprocess.py  metadata.py  metadata_tex.py  paper_yml_path.py  structured_export.py
src/arxiv2md_beta/query/: __init__.py  parser.py
src/arxiv2md_beta/schemas/: __init__.py  ingestion.py  query.py  sections.py  structured.py
src/arxiv2md_beta/schemas/json/: paper.document.schema.json  paper.meta.schema.json
src/arxiv2md_beta/settings/: __init__.py  loader.py  schema.py
src/arxiv2md_beta/utils/: aiofiles_compat.py  html_attrs.py  logging_config.py  metrics.py  progress.py
tests/: __init__.py  conftest.py  test_arxiv_id_date.py  test_author_affiliations.py  test_author_enrichment.py  test_batch.py  test_cache_resolution.py  test_citations.py  test_cli_images.py  test_figure_reorder.py  test_formatter.py  test_integration.py  test_integration_real_papers.py  test_integration_with_mocks.py  test_latex_parser.py  test_logging_config.py  test_markdown.py  test_markdown_postprocess.py  test_metadata_tex.py  test_network.py  test_output_finalize.py  test_paper_yml_path.py  test_query_parser.py  test_result_cache.py  test_sections_split.py  test_serializers.py  test_structured_export.py  test_tex_image_order.py
tests/benchmarks/: test_performance.py
tests/fixtures/: __init__.py  sample_arxiv.html  sample_metadata.json  sample_paper.tex
tests/ir/: conftest.py  test_image_resolver.py  test_models.py  test_visitor.py
tests/ir/builders/: test_html_builder.py  test_latex_builder.py
tests/ir/emitters/: test_markdown_block.py  test_markdown_inline.py
tests/ir/transforms/: test_figure_reorder.py  test_numbering.py  test_section_filter.py
