[project]
name = "arxiv2md-beta"
version = "0.3.0"
description = "Convert arXiv papers to Markdown with image support. Supports both HTML and LaTeX parsing modes."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",
    "Pillow>=10.0.0",  # For PDF to PNG conversion
    "pdf2image>=1.16.0",  # For PDF to PNG conversion
    "typer>=0.12.0",
]

[project.optional-dependencies]
latex = [
    "pypandoc>=1.12",
    "TexSoup>=0.3.0",
]

[project.scripts]
arxiv2md-beta = "arxiv2md_beta.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"arxiv2md_beta.config" = ["*.yml", "environments/*.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
